# SoftTeacher

./: pyproject.toml  test_train.sh  transform_dataset.py
configs/baseline/: base.py  faster_rcnn_r50_caffe_fpn_coco_partial_180k.py  testing_supervised_celldata.py
configs/soft_teacher/: base.py  soft_teacher_faster_rcnn_r50_caffe_fpn_coco_180k.py  soft_teacher_faster_rcnn_r_leiver.py  soft_teacher_org.py
softteacher/: inference.py
softteacher/configs/baseline/: base.py  faster_rcnn_r50_caffe_fpn_coco_full_720k.py  faster_rcnn_r50_caffe_fpn_coco_partial_180k.py
softteacher/configs/soft_teacher/: base.py  soft_teacher_faster_rcnn_r50_caffe_fpn_coco_180k.py  soft_teacher_org.py
softteacher/ssod/apis/: train.py
softteacher/ssod/datasets/pipelines/: formatting.py
softteacher/ssod/models/: soft_teacher.py
ssod/apis/: train.py
ssod/datasets/: builder.py
tools/: dist_test.sh  dist_train.sh  dist_train_partially.sh  test.py  train.py  train.sh
tools/dataset/: prepare_coco_data.sh  semi_coco.py
