[tool.poetry]
name = "softteacher-playground"
version = "0.1.0"
description = ""
authors = ["amartinezre05 <almartinezre05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mmcv-full = "^1.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
