[tool.poetry]
name = "softteacher"
version = "0.1.0"
description = ""
authors = ["German <german.grandas@utp.edu.co>"]

[tool.poetry.dependencies]
python = "^3.6"
addict = "2.4.0"
aiofiles = "0.8.0"
anyio = "3.6.1"
argcomplete = "2.0.0"
async-generator = "1.10"
boto3 = "1.23.10"
botocore = "1.26.10"
certifi = "2022.5.18.1"
charset-normalizer = "2.0.12"
click = "8.0.4"
contextvars = "2.4"
cycler = "0.11.0"
dataclasses = "0.8"
decorator = "4.4.2"
Deprecated = "1.2.13"
dill = "0.3.4"
dnspython = "2.2.1"
docker-pycreds = "0.4.0"
eventlet = "0.33.1"
fiftyone = "0.15.1"
fiftyone-brain = "0.8.2"
fiftyone-db = "0.3.0"
future = "0.18.2"
gitdb = "4.0.9"
GitPython = "3.1.18"
glob2 = "0.7"
greenlet = "1.1.2"
h11 = "0.12.0"
httpcore = "0.14.7"
httpx = "0.22.0"
idna = "3.3"
imageio = "2.15.0"
immutables = "0.18"
importlib-metadata = "4.8.3"
importlib-resources = "5.4.0"
Jinja2 = "3.0.3"
jmespath = "0.10.0"
joblib = "1.1.0"
kaleido = "0.2.1"
kiwisolver = "1.3.1"
MarkupSafe = "2.0.1"
matplotlib = "3.3.4"
mmcv-full = "1.5.1"
mongoengine = "0.20.0"
motor = "2.5.1"
ndjson = "0.3.1"
networkx = "2.5.1"
numpy = "1.19.5"
opencv-python = "4.5.5.64"
opencv-python-headless = "4.6.0.66"
packaging = "21.3"
pathtools = "0.1.2"
patool = "1.12"
Pillow = "8.4.0"
plotly = "4.14.3"
pprintpp = "0.4.0"
prettytable = "2.5.0"
promise = "2.3"
protobuf = "3.19.4"
psutil = "5.9.1"
pycocotools = "2.0.4"
pydub = "0.25.1"
pymongo = "3.12.3"
pyparsing = "3.0.9"
pypinyin = "0.46.0"
python-dateutil = "2.8.2"
pytz = "2022.1"
PyWavelets = "1.1.1"
PyYAML = "6.0"
requests = "2.27.1"
retrying = "1.3.3"
rfc3986 = "1.5.0"
s3transfer = "0.5.2"
sentry-sdk = "1.5.12"
setproctitle = "1.2.3"
shortuuid = "1.0.9"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
tabulate = "0.8.10"
terminaltables = "3.1.5"
threadpoolctl = "3.1.0"
tifffile = "2020.9.3"
tornado = "6.1"
typing_extensions = "4.1.1"
tzdata = "2022.1"
tzlocal = "4.2"
universal-analytics-python3 = "1.1.1"
urllib3 = "1.26.9"
voxel51-eta = "0.6.6"
wandb = "0.12.1"
wcwidth = "0.2.5"
wrapt = "1.14.1"
xmltodict = "0.13.0"
yapf = "0.32.0"
zipp = "3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
